background mobile wrapping fix

--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,7 @@ nav a:focus {
 }
 /*--start-banner--*/
 .banner {
-  background: url(../images/background.jpg);
+  background: url(../images/background.jpg) no-repeat;
   background-position: right;
   height: 100%;
   background-size: 100%;
